# splurge

./: .env.example  .gitignore  .lintstagedrc.js  .lintstagedrc.json  Anchor.toml  README.md  SolanaPrograms.toml  bun.lockb  package.json  rustfmt.toml  tuktuk.toml
.github/workflows/: build-and-test.yaml
.husky/: pre-commit
app/: .env.example  .gitignore  .prettierignore  bun.lockb  eslint.config.js  next.config.ts  package.json  tailwind.config.ts
bruno/: bruno.json  get store earnings.bru
bruno/accounts/: folder.bru  get config.bru  get items.bru  get orders.bru  get reviews.bru  get shoppers.bru  get stores.bru
bruno/config/: fetch config.bru
programs/splurge/: Cargo.toml
programs/splurge/src/: constants.rs  error.rs  events.rs  lib.rs  macros.rs  utils.rs
programs/splurge/src/instructions/: add_item.rs  add_whitelisted_mint.rs  cancel_order.rs  complete_order.rs  create_item.rs  create_order.rs  create_review.rs  create_shopper.rs  create_store.rs  delete_item.rs  initialize_config.rs  initialize_shopper.rs  initialize_store.rs  list_item.rs  mod.rs  remove_whitelisted_mint.rs  set_admin.rs  ship_order.rs  unlist_item.rs  update_admin.rs  update_config.rs  update_item.rs  update_order.rs  update_store.rs  withdraw_earnings.rs  withdraw_treasury.rs
programs/splurge/src/state/: config.rs  item.rs  mod.rs  order.rs  review.rs  shopper.rs  splurge_config.rs  store.rs  store_item.rs
scripts/: constants.ts  setup.ts
tests/: accounts.ts  constants.ts  endToEnd.test.ts  methods.ts  pda.ts  setup.ts  splurge.test.ts  splurge.ts  utils.ts
(+220 files in other folders)
