[package]
name = "splurge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "splurge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-staleness-check = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
pyth-solana-receiver-sdk = "0.6.1"
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
tuktuk-program = "0.3.2"
